tests/paczka1/fuzzy1/66043109.err
Error in line 1: u3ALVAM5i S429 92,6
Error in line 5: T4CoIHhi S467 48,1
Error in line 11: T4CoIHhi A199 85,9
Error in line 16: gfEqDM A199 99,6
Error in line 18: gfEqDM S467 63,0
Error in line 9: S856 A199 54,4
Error in line 19: u3ALVAM5i S856 1,7
